--- a/style.css
+++ b/style.css
@@ -539,7 +539,7 @@ hr{
 
 .welcome-mobil{
   white-space: nowrap;
-  margin-left: 85%;
+  margin-left: 100%;
   margin-top: -2%;
   font-size: 20px;
 }
@@ -572,9 +572,9 @@ hr{
   width: 350px;
   height: 35px;
   margin-left: 30%;
-  background-color: #292929;
+  background-color: #3d3d3d;
   border-radius: 6px;
-  border: 2px solid #292929;
+  border: 2px solid #3d3d3d;
   padding: 0px 12px;
   outline: none;
   caret-color: rgb(152, 88, 255);
@@ -594,9 +594,9 @@ hr{
   width: 350px;
   height: 35px;
   margin-left: 30%;
-  background-color: #292929;
+  background-color: #3d3d3d;
   border-radius: 6px;
-  border: 2px solid #292929;
+  border: 2px solid #3d3d3d;
   padding: 0px 12px;
   outline: none;
   caret-color: rgb(152, 88, 255);
